--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,13 +3,11 @@ workflows:
     name: Build Android APK
     max_build_duration: 30
     environment:
-      android:
-        sdk: 34
       java: 17
     scripts:
       - name: Clean project
         script: ./gradlew clean
-      - name: Build APK
+      - name: Build release APK
         script: ./gradlew assembleRelease
     artifacts:
       - app/build/outputs/apk/release/app-release.apk
