--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,8 @@ workflows:
     environment:
       java: 17
     scripts:
+      - name: Make gradlew executable
+        script: chmod +x gradlew
       - name: Clean project
         script: ./gradlew clean
       - name: Build release APK
